Added link to document

--- a/tutorials/Quarto.html
+++ b/tutorials/Quarto.html
@@ -50,7 +50,8 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#info" id="toc-info" class="nav-link active" data-scroll-target="#info"><span class="header-section-number">1</span> Info</a></li>
   <li><a href="#install-quarto" id="toc-install-quarto" class="nav-link" data-scroll-target="#install-quarto"><span class="header-section-number">2</span> Install Quarto</a>
   <ul class="collapse">
-  <li><a href="#packages-needed" id="toc-packages-needed" class="nav-link" data-scroll-target="#packages-needed"><span class="header-section-number">2.1</span> Packages needed</a></li>
+  <li><a href="#rstudio" id="toc-rstudio" class="nav-link" data-scroll-target="#rstudio"><span class="header-section-number">2.1</span> RStudio</a></li>
+  <li><a href="#packages-needed" id="toc-packages-needed" class="nav-link" data-scroll-target="#packages-needed"><span class="header-section-number">2.2</span> Packages needed</a></li>
   </ul></li>
   <li><a href="#installation-of-latex-on-windows-tinytex" id="toc-installation-of-latex-on-windows-tinytex" class="nav-link" data-scroll-target="#installation-of-latex-on-windows-tinytex"><span class="header-section-number">3</span> Installation of LaTex on Windows (tinyTeX)</a>
   <ul class="collapse">
@@ -104,14 +105,19 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="info" class="level2" data-number="1">
 <h2 data-number="1" class="anchored" data-anchor-id="info"><span class="header-section-number">1</span> Info</h2>
+<p>This document was created and is maintained by Charlie Belinsky and lives here: <a href="https://qfcatmsu.github.io/tutorials/Quarto.html" class="uri">https://qfcatmsu.github.io/tutorials/Quarto.html</a>. It is meant to be a living document so expect to see changes on it. Feel free to email me with questions and/or suggestions.</p>
 </section>
 <section id="install-quarto" class="level2" data-number="2">
 <h2 data-number="2" class="anchored" data-anchor-id="install-quarto"><span class="header-section-number">2</span> Install Quarto</h2>
 <p>You need to download and install Quarto version 1.4, which, as of November 16, 2023, is the pre-release version.</p>
 <p><a href="https://quarto.org/docs/download/prerelease.html" class="uri">https://quarto.org/docs/download/prerelease.html</a></p>
 <p>The released version of Quarto (1.3) will not work.</p>
-<section id="packages-needed" class="level3" data-number="2.1">
-<h3 data-number="2.1" class="anchored" data-anchor-id="packages-needed"><span class="header-section-number">2.1</span> Packages needed</h3>
+<section id="rstudio" class="level3" data-number="2.1">
+<h3 data-number="2.1" class="anchored" data-anchor-id="rstudio"><span class="header-section-number">2.1</span> RStudio</h3>
+<p>Quarto has worked for me on every 2023 version of RStudio, however it is recommended to get the latest RStudio because RStudio is constantly updating its Quarto interface (both Quarto and RStudio are developed by the same company, posit)</p>
+</section>
+<section id="packages-needed" class="level3" data-number="2.2">
+<h3 data-number="2.2" class="anchored" data-anchor-id="packages-needed"><span class="header-section-number">2.2</span> Packages needed</h3>
 <p>You need to install RmarkDown:<br>
 <code>install.packages("rmarkdown")</code></p>
 </section>
