--- a/tutorials/Quarto.html
+++ b/tutorials/Quarto.html
@@ -125,7 +125,9 @@ ul.task-list li input[type="checkbox"] {
 <section id="installation-of-latex-on-windows-tinytex" class="level2" data-number="3">
 <h2 data-number="3" class="anchored" data-anchor-id="installation-of-latex-on-windows-tinytex"><span class="header-section-number">3</span> Installation of LaTex on Windows (tinyTeX)</h2>
 <p>This is only needed if you plan to render a Quarto document in PDF format.</p>
-<p>Install package tinytex (in CRAN):<br>
+<p>Install the <strong><em>tinytex</em></strong> package (from CRAN):<br>
+<code>install.packages("tinytex")</code></p>
+<p>Use the <strong><em>tinytex</em></strong> package to install the <strong><em>tinytex</em></strong> application:<br>
 <code>tinytex::install_tinytex()</code></p>
 <section id="update-issue-with-tinytex" class="level3" data-number="3.1">
 <h3 data-number="3.1" class="anchored" data-anchor-id="update-issue-with-tinytex"><span class="header-section-number">3.1</span> Update issue with tinyTex</h3>
