--- a/tutorials/Quarto.html
+++ b/tutorials/Quarto.html
@@ -55,7 +55,7 @@ ul.task-list li input[type="checkbox"] {
   </ul></li>
   <li><a href="#installation-of-latex-on-windows-tinytex" id="toc-installation-of-latex-on-windows-tinytex" class="nav-link" data-scroll-target="#installation-of-latex-on-windows-tinytex"><span class="header-section-number">3</span> Installation of LaTex on Windows (tinyTeX)</a>
   <ul class="collapse">
-  <li><a href="#update-issue-with-tinytex" id="toc-update-issue-with-tinytex" class="nav-link" data-scroll-target="#update-issue-with-tinytex"><span class="header-section-number">3.1</span> Update issue with tinyTex</a></li>
+  <li><a href="#update-issue-with-tinytex" id="toc-update-issue-with-tinytex" class="nav-link" data-scroll-target="#update-issue-with-tinytex"><span class="header-section-number">3.1</span> Update issue with tinyTeX</a></li>
   </ul></li>
   <li><a href="#starting-a-new-quarto-document" id="toc-starting-a-new-quarto-document" class="nav-link" data-scroll-target="#starting-a-new-quarto-document"><span class="header-section-number">4</span> Starting a new Quarto document</a>
   <ul class="collapse">
@@ -109,7 +109,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="install-quarto" class="level2" data-number="2">
 <h2 data-number="2" class="anchored" data-anchor-id="install-quarto"><span class="header-section-number">2</span> Install Quarto</h2>
-<p>You need to download and install Quarto version 1.4, which, as of November 16, 2023, is the pre-release version.</p>
+<p>You need to download and install Quarto version <strong><em>1.4</em></strong>, which, as of November 16, 2023, is the pre-release version.</p>
 <p><a href="https://quarto.org/docs/download/prerelease.html" class="uri">https://quarto.org/docs/download/prerelease.html</a></p>
 <p>The released version of Quarto (1.3) will not work.</p>
 <section id="rstudio" class="level3" data-number="2.1">
@@ -124,13 +124,13 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="installation-of-latex-on-windows-tinytex" class="level2" data-number="3">
 <h2 data-number="3" class="anchored" data-anchor-id="installation-of-latex-on-windows-tinytex"><span class="header-section-number">3</span> Installation of LaTex on Windows (tinyTeX)</h2>
-<p>This is only needed if you plan to render a Quarto document in PDF format.</p>
+<p>This is only needed if you plan to render a Quarto document directly to PDF format.</p>
 <p>Install the <strong><em>tinytex</em></strong> package (from CRAN):<br>
 <code>install.packages("tinytex")</code></p>
 <p>Use the <strong><em>tinytex</em></strong> package to install the <strong><em>tinytex</em></strong> application:<br>
 <code>tinytex::install_tinytex()</code></p>
 <section id="update-issue-with-tinytex" class="level3" data-number="3.1">
-<h3 data-number="3.1" class="anchored" data-anchor-id="update-issue-with-tinytex"><span class="header-section-number">3.1</span> Update issue with tinyTex</h3>
+<h3 data-number="3.1" class="anchored" data-anchor-id="update-issue-with-tinytex"><span class="header-section-number">3.1</span> Update issue with tinyTeX</h3>
 <p>When rendering a PDF Quarto might prompt you to update <strong>tlmgr</strong>, which is your LaTeX distribution. You will not be able to render a PDF until the update has occurred but following Quarto’s prompts will NOT be successful.</p>
 <p>You need to update <strong>tlmgr</strong> manually by running:<br>
 <code>tinytex::tlmgr_update()</code></p>
