Put in what's next section

--- a/tutorials/Quarto.html
+++ b/tutorials/Quarto.html
@@ -47,7 +47,10 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#info" id="toc-info" class="nav-link active" data-scroll-target="#info"><span class="header-section-number">1</span> Info</a></li>
+  <li><a href="#info" id="toc-info" class="nav-link active" data-scroll-target="#info"><span class="header-section-number">1</span> Info</a>
+  <ul class="collapse">
+  <li><a href="#whats-next" id="toc-whats-next" class="nav-link" data-scroll-target="#whats-next"><span class="header-section-number">1.1</span> What’s next</a></li>
+  </ul></li>
   <li><a href="#install-quarto" id="toc-install-quarto" class="nav-link" data-scroll-target="#install-quarto"><span class="header-section-number">2</span> Install Quarto</a>
   <ul class="collapse">
   <li><a href="#rstudio" id="toc-rstudio" class="nav-link" data-scroll-target="#rstudio"><span class="header-section-number">2.1</span> RStudio</a></li>
@@ -106,6 +109,15 @@ ul.task-list li input[type="checkbox"] {
 <section id="info" class="level2" data-number="1">
 <h2 data-number="1" class="anchored" data-anchor-id="info"><span class="header-section-number">1</span> Info</h2>
 <p>This document was created and is maintained by Charlie Belinsky and lives here: <a href="https://qfcatmsu.github.io/tutorials/Quarto.html" class="uri">https://qfcatmsu.github.io/tutorials/Quarto.html</a>. It is meant to be a living document so expect to see changes on it. Feel free to email me with questions and/or suggestions.</p>
+<section id="whats-next" class="level3" data-number="1.1">
+<h3 data-number="1.1" class="anchored" data-anchor-id="whats-next"><span class="header-section-number">1.1</span> What’s next</h3>
+<ul>
+<li><p>explanation of the two types of Quarto editors (visual and source)</p></li>
+<li><p>using headers in quarto</p></li>
+<li><p>better organization of the document and presentation types</p></li>
+<li><p>rendering doucments</p></li>
+</ul>
+</section>
 </section>
 <section id="install-quarto" class="level2" data-number="2">
 <h2 data-number="2" class="anchored" data-anchor-id="install-quarto"><span class="header-section-number">2</span> Install Quarto</h2>
